# brix-protocol

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: agent_demo.py  quickstart.py
src/brix/: __init__.py  chain.py  client.py
src/brix/actions/: executor.py
src/brix/analysis/: consistency.py
src/brix/balance/: tracker.py
src/brix/cli/: explain.py  lint.py  test_cmd.py
src/brix/console/: __init__.py  output.py
src/brix/core/: result.py  router.py
src/brix/engine/: circuit_breaker.py  risk_scorer.py  signal_index.py
src/brix/guards/: __init__.py  budget.py  context.py  loop.py  observability.py  rate_limit.py  schema.py  timeout.py
src/brix/output/: __init__.py  analyzer.py  guard.py  result.py
src/brix/regulated/cli/: explain.py  generate_tests.py  lint.py  test_cmd.py
src/brix/regulated/llm/: anthropic_adapter.py
src/brix/regulated/sampling/: tiers.py
src/brix/retrieval/: __init__.py  protocol.py
src/brix/sampling/: sampler.py  tiers.py
src/brix/spec/: defaults.py  models.py
src/brix/specs/finance/: v1.0.0.yaml
src/brix/specs/general/: v1.0.0.yaml
src/brix/specs/hr/: v1.0.0.yaml
src/brix/specs/legal/: v1.0.0.yaml
src/brix/specs/medical/: v1.0.0.yaml
tests/: conftest.py  test_balance.py  test_budget_guard.py  test_chain.py  test_circuit_breaker.py  test_classifier.py  test_cli_explain.py  test_cli_generate.py  test_cli_lint.py  test_cli_test.py  test_consistency.py  test_context_guard.py  test_evaluator.py  test_improvements.py  test_loop_guard.py  test_observability_guard.py  test_rate_limit_guard.py  test_regulated_guard.py  test_replay.py  test_result.py  test_retry_guard.py  test_risk_scorer.py  test_router.py  test_sampler.py  test_schema_guard.py  test_signal_index.py  test_spec_loader.py  test_timeout_guard.py
